--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "dotenv": "^16.4.7",
     "firebase": "^11.0.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
-    "sweetalert2": "^11.14.5"
+    "react-slick": "^0.30.2",
+    "sweetalert2": "^11.14.5",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
